[gd_scene load_steps=3 format=3 uid="uid://byqugljogsx07"]

[ext_resource type="Script" uid="uid://cx146wfo1e6c8" path="res://features/main_menu/main_menu.gd" id="1_xtl3e"]
[ext_resource type="AudioStream" uid="uid://dhtqahbcgq3xl" path="res://features/main_menu/61392__gleepglop__beercanopening.wav" id="2_4gv6e"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xtl3e")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.15625, 0.15625, 0.15625, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 124.0
offset_top = -49.0
offset_right = 410.0
offset_bottom = 49.0
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Graj"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Wyjd≈∫"

[node name="BeerCanOpeningSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_4gv6e")
